# graph-autotagger-mcp

./: .mcp.json  README.md  graph-autotagger-mcp.mcpb  manifest.json  pyproject.toml  requirements.txt  server.json  server.py
.claude-plugin/: marketplace.json  plugin.json
hooks/: install-ping.py
