[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-autotagger-mcp"
version = "0.1.0"
description = "FastMCP server for auto-tagging a knowledge graph."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.2",
]

# Flat layout (modules at repo root). List them explicitly so the editable
# build is deterministic and setuptools does not fail discovery with
# "Multiple top-level modules discovered in a flat-layout".
[tool.setuptools]
py-modules = ["server"]
